@@ -1,3 +1,8 @@
+06 March 2007
+
+* mail_file tag added by maildir delivery and mbox_file by mbox. Also pass the
+  tags block up and down between parent and child so these tags actually stick.
+
 04 March 2007
 
 * Bug fix: fill in the correct size for maildir fetched mail rather than using
@@ -90,4 +95,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.27 2007-03-05 15:48:56 nicm Exp $
+$Id: CHANGES,v 1.28 2007-03-06 10:04:28 nicm Exp $
